# pfx-poker

./: README.md  pyproject.toml
src/holdem_trainer/: __init__.py  cards.py  hand_evaluator.py  main.py  models.py  pot_odds.py  recommendation_engine.py  scenario_generator.py  theme.py  ui.py  visuals.py
tests/: test_hand_evaluator.py  test_recommendation_engine.py  test_scenario_generator.py
