[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-trainer"
version = "0.1.0"
description = "Texas Hold'em card and pot odds practice app built with Dear PyGui."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dearpygui>=1.11,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
poker-trainer = "holdem_trainer.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
